--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,10 @@
 * {
-  padding: 0;
-  margin: 0;
-  border: 0;
-  vertical-align: baseline;
-  text-decoration: none;
-  box-sizing: border-box;
+    margin: 0;
+    border: 0;
+    padding: 0;
+    text-decoration: none;
+    box-sizing: border-box;
+    vertical-align: baseline;
 }
 body{
     height: 100vh;
@@ -34,10 +34,12 @@ header h1{
 .menu{
     grid-area: Me;
     padding-top: 2rem;
+    height: 50%;
+    background-color: #ddd;
 }
 .menu .item{
-    border: 0.1rem #666666 solid;
-    height: 4rem;
+    border: 0.1rem #fff solid;
+    height: 25%;
     width: 100%;
 }
 .content{
@@ -57,6 +59,6 @@ header h1{
 }
 footer{
     grid-area: Fo;
-    background-color: #dddddd;
+    background-color: #ddd;
     padding: 1rem;
 }
